--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,13 @@ python = "^3.10"
 pytest = "^8.2.1"
 pylint = "^3.2.2"
 
+[tool.pytest.ini_options]
+pythonpath = [
+    "."
+]
+
+[MASTER]
+init-hook = 'import sys; sys.path.append(".")'
 
 [build-system]
 requires = ["poetry-core"]
