--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 pytest = "^8.2.1"
 pylint = "^3.2.2"
+requests = "^2.32.2"
 
 [build-system]
 requires = ["poetry-core"]
